--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.sidebar {
+  height: 100vh;
+}
+.content {
+  width: 100%;
+}
+.post-card {
+  margin: 20px 50px;
+  width: 30rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hashtag {
+  margin: 0 3px;
+}
+.reaction {
+  margin: 20px;
+}
+.welcome-message {
+  margin: 100px;
+}
+.spinner {
+  margin: 40px;
+  width: 300px;
+  height: 80px;
+  font-weight: 900;
 }
